<?xml version="1.0"?>
<package>
  <name>usb_sensor_message</name>
  <version>0.0.0</version>
  <description>The usb_sensor_message package</description>
  <maintainer email="zhouweiguang@hotmail.com">Eric Chow</maintainer>
  <license>TODO</license>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
